fix spacing without cape editor

--- a/css/capeEditor.css
+++ b/css/capeEditor.css
@@ -1,6 +1,6 @@
 #capeEditor {
   width: 600px;
-  padding: 1em;
+  padding: .5em;
   margin: 1em;
   display: flex;
   align-items: stretch;
